# emb6

./: .gitmodules  CMakeLists.txt
apps/extif/: main.c  slip_radio.c  slip_radio.h
apps/ide/CCS/cc13x0/no-rtos/: .cproject  .gitignore  .project
apps/ide/CCS/cc13x0/no-rtos/targetConfigs/: CC1350F128.ccxml
apps/ide/CCS/cc13x0/ti-rtos/: .cproject  .project
apps/ide/CCS/cc13x2/cc13x2-ti-rtos/emb6_CC1352R1_LAUNCHXL_tirtos_ccs/: .ccsproject  .cproject  .gitignore  .project  CC1352R1_LAUNCHXL_TIRTOS.cmd
apps/ide/CCS/cc13x2/cc13x2-ti-rtos/emb6_CC1352R1_LAUNCHXL_tirtos_ccs/targetConfigs/: CC1352R1F3.ccxml  CC1352R1F3_server.ccxml
apps/ide/CCS/cc13x2/cc13x2-ti-rtos/tirtos_builds_CC1352R1_LAUNCHXL_release_ccs/: .cproject
core/: CMakeLists.txt  emb6.c  emb6.h  emb6_conf.h
core/inc/apl/er-coap/: er-coap-observe.h  er-coap.h
core/inc/apl/oma-lwm2m/: lwm2m-engine.h  lwm2m-object.h
core/inc/apl/rest-engine/: rest-engine.h
core/inc/dll/framer/: framer_802154.h  framer_802154_ll.h
core/src/apl/er-coap/: er-coap-engine.c  er-coap-observe.c  er-coap.c
core/src/apl/oma-lwm2m/: lwm2m-engine.c  lwm2m-object.c  oma-tlv.c
core/src/apl/rest-engine/: rest-engine.c
core/src/dll/dllc/: dllc_802154.c  dllc_null.c
core/src/dll/dllsec/: dllsec_802154.c  dllsec_null.c
core/src/dll/framer/: framer_802154.c  framer_802154_ll.c
core/src/dll/mac/: mac_802154.c
core/src/net/sicslowpan/: framer-802154.c  sicslowpan.c
core/src/phy/: phy_802154.c
demo/: CMakeLists.txt  demo_main.c
demo/ide/CCS/cc13x0/no-rtos/: .ccsproject  .cproject  .gitignore  .project
demo/ide/CCS/cc13x0/no-rtos/targetConfigs/: CC1350F128.ccxml
demo/ide/CCS/cc13x0/no-rtos/udp-socket-client/: .gitignore
demo/ide/CCS/cc13x0/no-rtos/udp-socket-server/: .gitignore
demo/ide/CCS/cc13x0/ti-rtos/: .cproject
demo/ide/CCS/cc13x2/cc13x2-ti-rtos/emb6_CC1352R1_LAUNCHXL_tirtos_ccs/: .cproject  .gitignore  .project
demo/ide/CCS/cc13x2/cc13x2-ti-rtos/emb6_CC1352R1_LAUNCHXL_tirtos_ccs/targetConfigs/: CC1352R1F3.ccxml  CC1352R1F3_client.ccxml
demo/ide/CCS/cc13x2/cc13x2-ti-rtos/emb6_CC1352R1_LAUNCHXL_tirtos_ccs/udp-socket-server/: .gitignore
demo/ide/CCS/cc13x2/cc13x2-ti-rtos/tirtos_builds_CC1352R1_LAUNCHXL_release_ccs/: .ccsproject
demo/serialapi/: demo_serialapi.c
demo/serialapi/serialapi/: lwm2mapi.c  lwm2mapi.h  serialapi.c
emb6/: emb6.c  emb6.h
services/lwm2mapi/: lwm2mapi.c
services/serialapi/: SConscript  demo_serialapi.c  serialapi_core.c  serialapi_core.h
services/udp_alive/: SConscript  demo_udp_alive.c  udp_alive.c  udp_alive.h
utils/: CMakeLists.txt
utils/inc/: aes-128.h  evproc.h
utils/src/: aes-128.c  crc.c
